@@ -10,19 +10,19 @@ Run the following command on the parent maven module `kafka-visualizer`:
 
 `$ mvn package`
 
-The executable jar will be generated under the `target` directory of `kafka-visualizer-rest` module.
+The executable jar will be generated under the `target` directory of the `kafkavisualizer/rest` module.
 
 **Requirements:**
 
 1.  Maven
-2.  JDK 10 with JavaFX
+2.  OpenJDK 12
 3.  Node Package Manager (npm)
 
 ## How to run (locally)?
 
 Run the executable jar using the following command and then navigate to `localhost:8080` on your browser:
 
-`$ java --add-modules java.activation -jar .\kafka-visualizer-rest-1.0-SNAPSHOT.jar --zookeeper=hostname:port --kafka=hostname:port --env=<DEV,QA,UAT or PROD>`
+`$ java -jar /path/to/kafka-visualizer-rest-1.0-SNAPSHOT.jar --zookeeper=hostname:port --kafka=hostname:port --env=<DEV,QA,UAT or PROD>`
 
 ## How to run (Dockerfile)?
 
